# falcon

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  compile_commands.json  example.c  example.cpp  main
.github/workflows/: ci.yml
.zed/: settings.json
docs/guide/: GUIDE.md
include/: falcon.h  fc.hpp
include/falcon/: consts.h  errn.h  http.h  path.h  request.h  response.h  router.h  router_internal.h  schema.h  stringview.h  templates.h  utils.h
src/: falcon.c  fc.cpp  http.c  http.cpp  http.hpp  path.c  req.cpp  req.hpp  request.c  res.cpp  res.hpp  router.c  router.cpp  router.hpp  stringview.c  templates.hpp  utils.cpp  utils.hpp
test/: locust-loadtest.py
tests/: CMakeLists.txt  test_router.c
views/: index.html
